--- a/src/frontend/src/pages/AdminPages/adminStyle.css
+++ b/src/frontend/src/pages/AdminPages/adminStyle.css
@@ -136,6 +136,7 @@
 }
 .red{
     color: red;
+    cursor: pointer;
 }
 /* ActionThree style end */
 /* AdminTable style start */
@@ -211,3 +212,39 @@
     color: white
 }
 /* Createjob style end */
+
+/* Modal Overlay (background dim) */
+.modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 999;
+  }
+  
+  /* Modal Box */
+  .modal-box {
+    background: white;
+    padding: 20px;
+    border-radius: 8px;
+    width: 300px;
+    max-width: 100%;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+    position: relative;
+    text-align: center;
+  }
+  
+  /* Close Button */
+  .close-button {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    font-size: 24px;
+    cursor: pointer;
+  }
+  
