--- a/src/frontend/src/App.css
+++ b/src/frontend/src/App.css
@@ -82,14 +82,15 @@ color: black
   background-color: var(---buttonColor);
   color: white
 }
-.BtnSave{
+.BtnSave2{
 width: 100%;
 height: 100%;
 border: none;
-font-size: 14px;
+font-size: 16px;
 border-radius: 8px;
 background-color: var(---buttonColor);
-color: white
+color: white;
+padding: 14px;
 }
 
 /* Topbar style ends */
